--- a/Software/RP2040/dualLevelSens/CMakeLists.txt
+++ b/Software/RP2040/dualLevelSens/CMakeLists.txt
@@ -9,6 +9,8 @@ target_sources(dualLevelSens PUBLIC
     ${CMAKE_CURRENT_LIST_DIR}/../common/uart.cpp
     ${CMAKE_CURRENT_LIST_DIR}/../common/gm_busSlave.cpp
     ${CMAKE_CURRENT_LIST_DIR}/../common/paraTable.cpp
+    ${CMAKE_CURRENT_LIST_DIR}/../common/gm_busMaster.cpp
+    ${CMAKE_CURRENT_LIST_DIR}/../common/gm_bus.cpp
 )	
 		
 target_include_directories(dualLevelSens PUBLIC
