--- a/Software/RP2040/CMakeLists.txt
+++ b/Software/RP2040/CMakeLists.txt
@@ -14,6 +14,7 @@ pico_sdk_init()
 # add projects
 add_subdirectory(dualLevelSens)
 add_subdirectory(testSequencer)
+add_subdirectory(testBusPicoBoard)
 
 add_compile_options(-Wall
         -Wno-format          # int != int32_t as far as the compiler is concerned because gcc has int32_t as long int
