--- a/Software/RP2040/.vscode/launch.json
+++ b/Software/RP2040/.vscode/launch.json
@@ -32,6 +32,28 @@
             "request": "launch",
             "servertype": "openocd",
             "cwd": "${workspaceRoot}",
+            "executable": "./build/testBusPicoBoard/testBusPicoBoard.elf",
+            "name": "Debug testBusPicoBoard",
+            "device": "Pico2040",
+            "configFiles": [
+                "interface/picoprobe.cfg",
+                "target/rp2040.cfg", 
+            ],
+            "searchDir": ["D:\\Programme\\openocd_rp2040\\tcl"],
+            "runToEntryPoint": "main",
+            "postRestartCommands": [
+                "break main",
+                "continue"
+            ],
+            "showDevDebugOutput": "both",
+            "svdFile": "D:/Projekte/pico-sdk/src/rp2040/hardware_regs/rp2040.svd",
+        }
+
+        {
+            "type": "cortex-debug",
+            "request": "launch",
+            "servertype": "openocd",
+            "cwd": "${workspaceRoot}",
             "executable": "./build/testSequencer/testSequencer.elf",
             "name": "Debug testSequencer",
             "device": "Pico2040",
