--- a/Software/RP2040/uniFw/CMakeLists.txt
+++ b/Software/RP2040/uniFw/CMakeLists.txt
@@ -28,6 +28,7 @@ target_sources(uniFw PUBLIC
     ${CMAKE_CURRENT_LIST_DIR}/../common/rp_debug.cpp
     ${CMAKE_CURRENT_LIST_DIR}/../common/gm_dualCapSens.cpp
     ${CMAKE_CURRENT_LIST_DIR}/../common/gm_termMonitor.cpp
+    ${CMAKE_CURRENT_LIST_DIR}/../common/rp_timerServer.cpp
 )	
 		
 target_include_directories(uniFw PUBLIC
