--- a/Software/RP2040/uniFw/CMakeLists.txt
+++ b/Software/RP2040/uniFw/CMakeLists.txt
@@ -29,6 +29,8 @@ target_sources(uniFw PUBLIC
     ${CMAKE_CURRENT_LIST_DIR}/../common/gm_dualCapSens.cpp
     ${CMAKE_CURRENT_LIST_DIR}/../common/gm_termMonitor.cpp
     ${CMAKE_CURRENT_LIST_DIR}/../common/rp_timerServer.cpp
+    ${CMAKE_CURRENT_LIST_DIR}/../common/gm_peristalticPumpCon.cpp
+    ${CMAKE_CURRENT_LIST_DIR}/../common/gm_stepperCon.cpp
 )	
 		
 target_include_directories(uniFw PUBLIC
@@ -54,6 +56,7 @@ target_compile_definitions(uniFw PUBLIC
 )
 
 pico_generate_pio_header(uniFw ${CMAKE_CURRENT_LIST_DIR}/../common/capSens.pio)
+pico_generate_pio_header(uniFw ${CMAKE_CURRENT_LIST_DIR}/../common/ioExpander.pio)
 
 # exectue from ram
 # pico_set_binary_type(uniFw copy_to_ram)
